--- a/_posts/2019-10-14-Python之算法分析.md
+++ b/_posts/2019-10-14-Python之算法分析.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Python之算法分析
-categories: Python
+categories: Algorithms & Data Structures
 description: 算法分析与大O记法，以及Python数据结构的性能
-keywords: Python
+keywords: Algorithms,Data Structures,Python
 ---
 
 本文是我自学Python过程的学习笔记和心得体会，不求全面，参考书籍**《Python数据结构与算法分析》**。
