--- a/_posts/2019-10-14-Python算法分析.md
+++ b/_posts/2019-10-14-Python算法分析.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: Python之算法分析
+title: Python算法分析
 categories: Algorithms
 description: 算法分析与大O记法，以及Python数据结构的性能
 keywords: Algorithms,Data Structures,Python
 ---
 
 本文是我自学Python过程的学习笔记和心得体会，不求全面，参考书籍**《Python数据结构与算法分析》**。
-
+--------
 ## 算法分析
 
  程序的好坏取决与你的标准，我们应该朝着更高**可读性**代码的目标努力。对于算法而言，**算法分析**关注的是所使用的计算资源，即**空间（内存）**与**时间**，是一种独立于实现的算法度量方法。
