--- a/_posts/2019-10-15-Python栈的实现.md
+++ b/_posts/2019-10-15-Python栈的实现.md
@@ -11,7 +11,7 @@ keywords: Algorithms,Data Structures,Python
 
 #### 定义
 
-栈是一种**有序集合**，添加和删除操作总发生在同一端，即“顶端”，另一端称为顶端。
+栈是一种**有序集合**，添加和删除操作总发生在同一端，即“顶端”，另一端称为底端。
 
 #### 原则
 
